# LocalLLMSmartHourse

./: .env.example  .gitignore  AGENTS.md  README.md
.devcontainer/: AGENTS.md  devcontainer.json
.github/workflows/: ci.yml
backend/: AGENTS.md
backend/pkg/device-model/: AGENTS.md  device.schema.json  package-lock.json  package.json  types.ts
backend/prisma/: AGENTS.md  schema.prisma
backend/services/api-gateway/: AGENTS.md  Dockerfile  package-lock.json  package.json
backend/services/device-adapter/: AGENTS.md  Dockerfile  devices.config.json  mock-adapter.js  package-lock.json  package.json
backend/tools/: AGENTS.md  agent-run.js  ha-check.js  intent-run.js  mqtt-dump.js  package.json
deploy/: AGENTS.md  Dockerfile.dev  dev-container.sh  dev-up.sh  docker-compose.autostart.yml  docker-compose.yml
docs/: AGENTS.md  device-model.md
docs/api/: README.md  openapi.yaml
docs/feature/: todo.md
docs/feature/automation/: README.md  (+1 more)
firmware/: AGENTS.md
firmware/respeaker-satellite/: AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.local.example
firmware/respeaker-satellite/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio_pipeline.c  audio_pipeline.h  idf_component.yml  manual_test.c  manual_test.h  protocol.c  protocol.h  satellite_config.h  voice_turn.c  voice_turn.h  wake_word.c  wake_word.h  wifi_manager.c  wifi_manager.h  ws_client.c  ws_client.h
frontend/: AGENTS.md
frontend/mobile/: AGENTS.md
frontend/web/: AGENTS.md  package-lock.json  package.json  playwright.config.ts  vendor.d.ts
(+210 files in other folders)
