idf_component_register(
    SRCS
        "app_main.c"
        "audio_pipeline.c"
        "manual_test.c"
        "protocol.c"
        "voice_turn.c"
        "wake_word.c"
        "wifi_manager.c"
        "ws_client.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_event
        esp_netif
        esp_psram
        esp_timer
        esp_wifi
        esp_websocket_client
        json
        mbedtls
        nvs_flash
        spi_flash
)
